--- a/views/rules.erb
+++ b/views/rules.erb
@@ -1,3 +1,60 @@
 <h1>Welcome to Rock-Paper-Scissors!</h1>
 
 <p>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" target="_blank">Wikipedia</a>:</p>
+
+<p>Rock-paper-scissors (also known as paper, scissors, stone or other variants) is a hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand.</p>
+
+<p>These shapes are:</p>
+<ul>
+  <li>"rock" (a closed fist)</li>
+  <li>"paper" (a flat hand)</li>
+  <li>"scissors" (a fist with the index and middle fingers extended, forming a V)</li>
+</ul>
+
+<p>A player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors" or sometimes "blunts scissors"), but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut[s] paper"). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.</p>
+
+<table border="1">
+  <tbody>
+    <tr>
+      <td rowspan="2" colspan="2"></td>
+      <td colspan="3">and they play...</td>
+    </tr>
+
+    <tr>
+      <td>Rock</td>
+      <td>Paper</td>
+      <td>Scissors</td>
+    </tr>
+
+    <tr>
+      <td rowspan="3">If we play...</td>
+      <td>Rock</td>
+      <td>We tie</td>
+      <td>We lose</td>
+      <td>We win</td>
+    </tr>
+
+    <tr>
+      <td>Paper</td>
+      <td>We win</td>
+      <td>We tie</td>
+      <td>We lose</td>
+    </tr>
+
+    <tr>
+      <td>Scissors</td>
+      <td>We lose</td>
+      <td>We win</td>
+      <td>We tie</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone".</p>
+
+<img>
+<p>A chart showing how the three game elements interact</p>
+<img>
+<p>Kitsune-ken was a popular Japanese rock–paper–scissors variant.</p>
+<img>
+<p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).</p>
