--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-
+    <a href="/rock">Play Rock</a>
+    <a href="/paper">Play Paper</a>
+    <a href="/scissors">Play Scissors</a>
     <%= yield %>
 
   </body>
