--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <a href="/rock">Play Rock</a>
-    <a href="/paper">Play Paper</a>
-    <a href="/scissors">Play Scissors</a>
+    <div><a href="/rock">Play Rock</a></div>
+    <div><a href="/paper">Play Paper</a></div>
+    <div><a href="/scissors">Play Scissors</a></div>
     <%= yield %>
 
   </body>
