--- a/views/rules.erb
+++ b/views/rules.erb
@@ -52,9 +52,9 @@
 
 <p>Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone".</p>
 
-<img>
+<img src="/assets/Rock-paper-scissors.svg.png" alt="game image" />
 <p>A chart showing how the three game elements interact</p>
-<img>
+<img src="assets/Kitsune-ken_(狐拳),_Japanese_rock-paper-scissors_variant,_from_the_Genyoku_sui_bento_(1774).jpg" >
 <p>Kitsune-ken was a popular Japanese rock–paper–scissors variant.</p>
-<img>
+<img src="assets/640px-Mushi-ken_(虫拳),_Japanese_rock-paper-scissors_variant,_from_the_Kensarae_sumai_zue_(1809).jpg" >
 <p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).</p>
